@@ -6,43 +6,20 @@
 . /etc/profile
 oe_setup_addon service.snapserver
 
-config="pulseaudio.conf"
-link="/storage/.config/pulse-daemon.conf.d/50-snapserver.conf"
-mkdir -p "$(dirname $link)"
-ln -sf "$ADDON_HOME/$config" "$link"
-if [ ! -e "$ADDON_HOME/$config" ]; then
-  cp "$ADDON_DIR/config/$config" "$ADDON_HOME"
-fi
+ASOUND_CONF="/run/asound.conf"
+KODI_ASOUND_CONF="$ADDON_DIR/config/asound.conf"
+KODI_ASOUND_FIFO="/tmp/snapkodi"
+KODI_ASOUND_TAG="$(head -n 1 "$KODI_ASOUND_CONF")"
 
-file="/tmp/snapkodi"
-sink_name="Snapserver"
-if [ -z "$(pactl list short | grep $sink_name)" ]; then
-  pactl load-module module-pipe-sink \
-                    file="$file" \
-                    rate=48000 \
-                    sink_name="$sink_name" \
-                    sink_properties=device.description="$sink_name"
+if [ -f "$ASOUND_CONF" ]; then
+  sed -i "/$KODI_ASOUND_TAG/,/$KODI_ASOUND_TAG/d" "$ASOUND_CONF"
 fi
-
-case "$ss_st" in
-  Default)
-    stream="pipe:///tmp/snapfifo?name=Default"
-    ;;
-  Kodi)
-    stream="pipe://$file?name=Kodi"
-    ;;
-  Spotify)
-    stream="spotify:///librespot?name=Spotify"
-    ;;
-  *)
-    stream="airplay:///shairport-sync?name=AirPlay"
-    ;;
-esac
+cat "$KODI_ASOUND_CONF" >> "$ASOUND_CONF"
 
 HOME="$ADDON_HOME" \
-nice -n "$ss_ni" \
-snapserver \
+  nice -n "$ss_ni" \
+  snapserver \
   --controlPort  "$ss_cp"  \
   --port         "$ss_sp"  \
-  --stream       "$stream" \
+  --stream       "pipe://$KODI_ASOUND_FIFO?name=Kodi" \
   > /dev/null
