@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
   <category  label="30000">
-    <setting label="30001" type="number" id="ss_sp" default="1704"/>
-    <setting label="30002" type="number" id="ss_cp" default="1705"/>
-    <setting label="30003" type="slider" id="ss_ni" default="0" range="-20,1,19" option="int"/>
-    <setting label="30004" type="select" id="ss_st" values="AirPlay|Default|Kodi|Spotify"/>
+    <setting label="30001" type="number" id="ss_sp" default="1704" />
+    <setting label="30002" type="number" id="ss_cp" default="1705" />
+    <setting label="30003" type="slider" id="ss_ni" default="0" range="-20,1,19" option="int" />
   </category>
 </settings>
